--- a/roles/deploy_flask_app/tasks/setup_infra.yaml
+++ b/roles/deploy_flask_app/tasks/setup_infra.yaml
@@ -12,6 +12,7 @@
           key-name: "{{ deploy_flask_app_sshkey_pair_name }}"
           image-id: "{{ deploy_flask_app__vm_image_id }}"
           instance-state-name: running
+        region: "{{ deploy_flask_app_region | default(omit) }}"
       register: deploy_flask_app_vms
 
     - name: Compute number of instances to create/delete
@@ -35,6 +36,7 @@
         wait: true
         count: "{{ deploy_flask_app_expected_instances }}"
         state: started
+        region: "{{ deploy_flask_app_region | default(omit) }}"
       register: deploy_flask_app_workers
       when: deploy_flask_app_expected_instances | int > 0
 
@@ -45,6 +47,7 @@
           key-name: "{{ deploy_flask_app_sshkey_pair_name }}"
           image-id: "{{ deploy_flask_app__vm_image_id }}"
           instance-state-name: running
+        region: "{{ deploy_flask_app_region | default(omit) }}"
       register: deploy_flask_app_vms
 
     - name: Create list of instances (join)
