Conditionnal delete for sshkey_file

--- a/playbooks/webapp/webapp.yaml
+++ b/playbooks/webapp/webapp.yaml
@@ -30,4 +30,5 @@
       ansible.builtin.file:
         state: absent
         path: "{{ sshkey_file }}"
+      when: sshkey_file is defined
       ignore_errors: true
