--- a/playbooks/webapp/tasks/create.yaml
+++ b/playbooks/webapp/tasks/create.yaml
@@ -202,8 +202,21 @@
             db_instance_identifier: "{{ rds_identifier }}"
           register: rds_result
 
-    - name: Create key pair to connect to the virtual machine
-      ansible.builtin.include_tasks: manage_keypair.yaml
+    - name: Set variable for SSH private key file path
+      ansible.builtin.set_fact:
+        deploy_flask_app_bastion_ssh_private_key_path: "~/.{{ resource_prefix }}_id_rsa"
+
+    - name: Create key pair to connect to the workers
+      amazon.aws.ec2_key:
+        name: "{{ deploy_flask_app_sshkey_pair_name }}"
+      register: keypair_result
+
+    - name: Save private key into a file
+      ansible.builtin.copy:
+        content: "{{ keypair_result.key.private_key }}"
+        dest: "{{ deploy_flask_app_bastion_ssh_private_key_path }}"
+        mode: 0600
+      when: keypair_result is changed
 
     - name: Ensure IAM instance role exists
       amazon.aws.iam_role:
