--- a/roles/deploy_flask_app/tasks/setup_infra.yaml
+++ b/roles/deploy_flask_app/tasks/setup_infra.yaml
@@ -1,5 +1,44 @@
 ---
-- name: Create Cloud Resources (workers, load balancer, etc)
+- name: Describe bastion instance
+  amazon.aws.ec2_instance_info:
+    instance_ids:
+      - "{{ deploy_flask_app_bastion_instance_id }}"
+  register: bastion_info
+
+- name: Set common variables to be used later
+  ansible.builtin.set_fact:
+    deploy_flask_app__resource_prefix: "{{ bastion_info.instances.0.public_dns_name | split('.') | first }}"
+    deploy_flask_app__group_id: "{{ bastion_info.instances.0.security_groups[0].group_id }}"
+    deploy_flask_app__vm_image_id: "{{ bastion_info.instances.0.image_id }}"
+    deploy_flask_app__bastion_public_ip: "{{ bastion_info.instances.0.public_ip_address }}"
+    deploy_flask_app__public_subnet_id: "{{ bastion_info.instances.0.subnet_id }}"
+
+- name: Add bastion host to inventory
+  ansible.builtin.add_host:
+    hostname: bastion
+    ansible_ssh_user: "{{ deploy_flask_app_bastion_host_username }}"
+    ansible_host: "{{ deploy_flask_app__bastion_public_ip }}"
+    ansible_python_interpreter: auto
+    ansible_ssh_common_args: '-o "UserKnownHostsFile=/dev/null" -o StrictHostKeyChecking=no -i {{ deploy_flask_app_bastion_ssh_private_key_path }}'
+
+- name: Set variable for key pair
+  ansible.builtin.set_fact:
+    deploy_flask_app__workers_keypair_name: "{{ deploy_flask_app__resource_prefix }}-key"
+
+- name: Create key pair to connect to the workers
+  amazon.aws.ec2_key:
+    name: "{{ deploy_flask_app__workers_keypair_name }}"
+  register: keypair_result
+
+- name: Save key pair content into file on bastion host
+  ansible.builtin.copy:
+    content: "{{ keypair_result.key.private_key }}"
+    dest: "{{ deploy_flask_app_workers_ssh_private_key }}"
+    mode: 0600
+  when: keypair_result is changed
+  delegate_to: bastion
+
+- name: Create workers instances
   block:
     - name: Set variables
       ansible.builtin.set_fact:
@@ -9,7 +48,7 @@
       amazon.aws.ec2_instance_info:
         filters:
           network-interface.subnet-id: "{{ deploy_flask_app_private_subnet_id }}"
-          key-name: "{{ deploy_flask_app_sshkey_pair_name }}"
+          key-name: "{{ deploy_flask_app__workers_keypair_name }}"
           image-id: "{{ deploy_flask_app__vm_image_id }}"
           instance-state-name: running
       register: deploy_flask_app_vms
@@ -23,7 +62,7 @@
         name: "{{ deploy_flask_app_instance_name }}"
         instance_type: "{{ deploy_flask_app_workers_instance_type }}"
         image_id: "{{ deploy_flask_app__vm_image_id }}"
-        key_name: "{{ deploy_flask_app_sshkey_pair_name }}"
+        key_name: "{{ deploy_flask_app__workers_keypair_name }}"
         subnet_id: "{{ deploy_flask_app_private_subnet_id }}"
         network:
           assign_public_ip: false
@@ -42,7 +81,7 @@
       amazon.aws.ec2_instance_info:
         filters:
           network-interface.subnet-id: "{{ deploy_flask_app_private_subnet_id }}"
-          key-name: "{{ deploy_flask_app_sshkey_pair_name }}"
+          key-name: "{{ deploy_flask_app__workers_keypair_name }}"
           image-id: "{{ deploy_flask_app__vm_image_id }}"
           instance-state-name: running
       register: deploy_flask_app_vms
