--- a/playbooks/webapp/tasks/delete.yaml
+++ b/playbooks/webapp/tasks/delete.yaml
@@ -8,12 +8,6 @@
       region: "{{ region | default(aws_region) }}"
 
   block:
-    - name: Delete S3 bucket
-      amazon.aws.s3_bucket:
-        name: "{{ bucket_name }}"
-        state: absent
-        force: true
-
     - name: Get vpc information
       amazon.aws.ec2_vpc_net_info:
         filters:
@@ -65,10 +59,11 @@
             skip_final_snapshot: true
             wait: true
 
-        - name: Delete key pair to connect to the bastion VM
+        - name: Delete keys pairs created for the deployment
           amazon.aws.ec2_key:
-            name: "{{ deploy_flask_app_sshkey_pair_name }}"
+            name: "{{ item }}"
             state: absent
+          with_items: "{{ ec2_instances.instances | map(attribute='key_name') | unique | list }}"
 
         - name: Delete RDS subnet group
           amazon.aws.rds_subnet_group:
