--- a/playbooks/webapp/tasks/add_route53_records.yaml
+++ b/playbooks/webapp/tasks/add_route53_records.yaml
@@ -43,6 +43,7 @@
         failover: "PRIMARY"
         health_check: "{{ healthchk_primary_result.health_check.id }}"
         alias_hosted_zone_id: "{{ primary_lb.elb.hosted_zone_id }}"
+        overwrite: true
       register: alias_record_primary_result
 
     - name: Add an alias record that points to an aws ELB in the replica region
@@ -57,6 +58,7 @@
         failover: "SECONDARY"
         health_check: "{{ healthchk_replica_result.health_check.id }}"
         alias_hosted_zone_id: "{{ replica_lb.elb.hosted_zone_id }}"
+        overwrite: true
       register: alias_record_replica_result
 
     - name: Pause for 30 secs for the alias records to be active
