--- a/playbooks/webapp/tasks/create.yaml
+++ b/playbooks/webapp/tasks/create.yaml
@@ -205,6 +205,7 @@
     - name: Set variable for SSH private key file path
       ansible.builtin.set_fact:
         deploy_flask_app_bastion_ssh_private_key_path: "~/.{{ resource_prefix }}_id_rsa"
+      when: deploy_flask_app_bastion_ssh_private_key_path is undefined
 
     - name: Create key pair to connect to the workers
       amazon.aws.ec2_key:
