--- a/playbooks/webapp/vars/main.yaml
+++ b/playbooks/webapp/vars/main.yaml
@@ -59,7 +59,7 @@ rds_replica_cluster_region: us-east-2
 rds_replica_cluster_instance_name: "{{ resource_prefix }}-replica-instance"
 
 # vars for route53 records
-route53_subdomain: "flaskapp"
+route53_subdomain: "ansiblecloud.xyz"
 
 # A bucket to save RSA key into
 bucket_name: "bucket-rsa-{{ resource_prefix }}"
