--- a/roles/deploy_flask_app/tasks/setup_infra.yaml
+++ b/roles/deploy_flask_app/tasks/setup_infra.yaml
@@ -13,17 +13,18 @@
     deploy_flask_app__bastion_public_ip: "{{ bastion_info.instances.0.public_ip_address }}"
     deploy_flask_app__public_subnet_id: "{{ bastion_info.instances.0.subnet_id }}"
 
+- name: Set variable for key pair and bastion hostname
+  ansible.builtin.set_fact:
+    deploy_flask_app__workers_keypair_name: "{{ deploy_flask_app__resource_prefix }}-key"
+    deploy_flask_app__bastion_hostname: "{{ deploy_flask_app__resource_prefix }}-bastion"
+
 - name: Add bastion host to inventory
   ansible.builtin.add_host:
-    hostname: bastion
+    hostname: "{{ deploy_flask_app__bastion_hostname }}"
     ansible_ssh_user: "{{ deploy_flask_app_bastion_host_username }}"
     ansible_host: "{{ deploy_flask_app__bastion_public_ip }}"
     ansible_python_interpreter: auto
     ansible_ssh_common_args: '-o "UserKnownHostsFile=/dev/null" -o StrictHostKeyChecking=no -i {{ deploy_flask_app_bastion_ssh_private_key_path }}'
-
-- name: Set variable for key pair
-  ansible.builtin.set_fact:
-    deploy_flask_app__workers_keypair_name: "{{ deploy_flask_app__resource_prefix }}-key"
 
 - name: Create key pair to connect to the workers
   amazon.aws.ec2_key:
@@ -36,7 +37,7 @@
     dest: "{{ deploy_flask_app_workers_ssh_private_key }}"
     mode: 0600
   when: keypair_result is changed
-  delegate_to: bastion
+  delegate_to: "{{ deploy_flask_app__bastion_hostname }}"
 
 - name: Create workers instances
   block:
