fix minor issue

--- a/playbooks/webapp/webapp_ha_aurora.yaml
+++ b/playbooks/webapp/webapp_ha_aurora.yaml
@@ -61,7 +61,7 @@
     - vars/main.yaml
 
   tasks:
-    - name: Deplou application and add Route53 records
+    - name: Deploy application and add Route53 records
       when: operation == "create"
       block:
         - name: Deploy application into primary region
