--- a/changelogs/changelog.yaml
+++ b/changelogs/changelog.yaml
@@ -198,3 +198,26 @@ releases:
         name: move_objects_between_buckets
         namespace: null
     release_date: '2023-11-20'
+  3.0.0:
+    changes:
+      breaking_changes:
+      - roles/deploy_flask_app - Add parameter ``deploy_flask_app_bastion_ssh_private_key``
+        to define the path to the ssh private key file to use to connect to the bastion
+        host (https://github.com/redhat-cop/cloud.aws_ops/issues/109).
+      - roles/deploy_flask_app - The following parameters no longer required have
+        been removed ``deploy_flask_app_bastion_host_required_packages``, ``deploy_flask_app_local_registry_port``,
+        ``deploy_flask_app_local_registry_pwd``, ``deploy_flask_app_local_registry_user``,
+        ``deploy_flask_app_git_repository`` (https://github.com/redhat-cop/cloud.aws_ops/issues/103).
+      bugfixes:
+      - Fix incorrect dict attribute in backup_select_resources role.
+      minor_changes:
+      - Replace the postgres db engine version from 14.8 to 16.2
+      release_summary: This release fixes bug on roles, remove support for ansible-core
+        < 2.15.
+    fragments:
+    - 20231219-deploy_flask_app-update-arguments-spec.yml
+    - backup_select_resource_bug_fix.yml
+    - doc_link_update.yml
+    - fix_rds_db_version.yml
+    - v3.0.0.yml
+    release_date: '2024-07-24'
