--- a/changelogs/fragments/114-bump-ansible-lint-version.yml
+++ b/changelogs/fragments/114-bump-ansible-lint-version.yml
@@ -1,3 +1,3 @@
 ---
 minor_changes:
-  - Bump version of ansible-lint to minimum 24.7.0 (https://github.com/redhat-cop/cloud.aws_ops/pull/114).
+  - Bump version of ansible-lint to minimum 24.7.0 and ansible-core requirement to 2.15 (https://github.com/redhat-cop/cloud.aws_ops/pull/114).
