Update collection to pass tests
This updates the FQCN for several tasks after the modules were migrated
from community.aws to amazon.aws. The tox sanity test command has also been
updated as it no longer worked on the current version of ansible.

--- a/playbooks/webapp/tasks/delete.yaml
+++ b/playbooks/webapp/tasks/delete.yaml
@@ -23,7 +23,7 @@
 
         # Delete Load balancer
         - name: List Load balancer(s) from VPC
-          community.aws.elb_classic_lb_info:
+          amazon.aws.elb_classic_lb_info:
           register: load_balancers
 
         - name: Set fact for list of load balancers to delete
