--- a/tox.ini
+++ b/tox.ini
@@ -32,11 +32,9 @@ commands =
   yamllint -s {toxinidir}
   flake8 {toxinidir}
 
-[testenv:py39-sanity]
+[testenv:sanity]
 deps = ansible
-commands = ansible-test sanity --debug --requirements --local --skip-test future-import-boilerplate --skip-test metaclass-boilerplate --python 3.9
-setenv =
-    HOME = /tmp
+commands = ansible-test sanity
 
 [flake8]
 exclude = .git,.tox,tests/output
