--- a/roles/manage_transit_gateway/tasks/delete.yaml
+++ b/roles/manage_transit_gateway/tasks/delete.yaml
@@ -2,7 +2,7 @@
 - name: Run manage_transit_gateway role
   block:
     - name: List all the transit gateway attachments
-      community.aws.ec2_transit_gateway_info:
+      amazon.aws.ec2_transit_gateway_info:
       register: manage_transit_gateway_info
 
     - name: Get the transit gateway with the given description
@@ -17,20 +17,20 @@
       when: manage_transit_gateway_gw is defined
       block:
         - name: Describe attachments on a specific VPC
-          community.aws.ec2_transit_gateway_vpc_attachment_info:
+          amazon.aws.ec2_transit_gateway_vpc_attachment_info:
             filters:
               transit-gateway-id: '{{ manage_transit_gateway_gw.transit_gateway_id }}'
           register: manage_transit_gateway_info
 
         - name: Start deletion of all attachments
-          community.aws.ec2_transit_gateway_vpc_attachment:
+          amazon.aws.ec2_transit_gateway_vpc_attachment:
             state: absent
             id: '{{ item.transit_gateway_attachment_id }}'
             wait: True
           loop: '{{ manage_transit_gateway_info.attachments }}'
 
         - name: Check if all the transit gateway attachments have been deleted
-          community.aws.ec2_transit_gateway_vpc_attachment_info:
+          amazon.aws.ec2_transit_gateway_vpc_attachment_info:
             filters:
               transit-gateway-id: '{{ manage_transit_gateway_gw.transit_gateway_id }}'
           register: manage_transit_gateway_info
@@ -41,7 +41,7 @@
               - manage_transit_gateway_info.attachments | length == 0
 
         - name: Check for vpn attachments
-          community.aws.ec2_vpc_vpn_info:
+          amazon.aws.ec2_vpc_vpn_info:
           register: manage_transit_gateway_vpn_info
 
         - name: Set fact
@@ -53,7 +53,7 @@
           loop: "{{ manage_transit_gateway_vpn_info.vpn_connections }}"
 
         - name: Delete vpn connection, with customer gateway and transit_gateway
-          community.aws.ec2_vpc_vpn:
+          amazon.aws.ec2_vpc_vpn:
             customer_gateway_id: '{{ manage_transit_gateway_cgw }}'
             transit_gateway_id: '{{ manage_transit_gateway_gw.transit_gateway_id }}'
             state: absent
@@ -63,7 +63,7 @@
             - manage_transit_gateway_cgw is defined
 
         - name: Check for vpn attachments after deletion
-          community.aws.ec2_vpc_vpn_info:
+          amazon.aws.ec2_vpc_vpn_info:
           register: manage_transit_gateway_vpn_att_info
 
         - name: Check for vpn attachments
@@ -75,7 +75,7 @@
           loop: "{{ manage_transit_gateway_vpn_att_info.vpn_connections }}"
 
         - name: Delete Transit Gateways
-          community.aws.ec2_transit_gateway:
+          amazon.aws.ec2_transit_gateway:
             state: absent
             transit_gateway_id: '{{ manage_transit_gateway_gw.transit_gateway_id }}'
           ignore_errors: true
