--- a/roles/manage_vpc_peering/tasks/accept.yaml
+++ b/roles/manage_vpc_peering/tasks/accept.yaml
@@ -7,7 +7,7 @@
 - name: Accept VPC peering connection request
   block:
     - name: Ensure VPC peering connection request exists before moving forward
-      community.aws.ec2_vpc_peering_info:
+      amazon.aws.ec2_vpc_peering_info:
         peer_connection_ids:
           - "{{ manage_vpc_peering_vpc_peering_conn_id }}"
         region: "{{ manage_vpc_peering_region }}"
@@ -18,7 +18,7 @@
       until: manage_vpc_peering_peering_info.vpc_peering_connections[0].vpc_peering_connection_id is defined
 
     - name: Accept VPC peering request
-      community.aws.ec2_vpc_peer:
+      amazon.aws.ec2_vpc_peering:
         region: "{{ manage_vpc_peering_region }}"
         peering_id: "{{ manage_vpc_peering_vpc_peering_conn_id }}"
         peer_owner_id: "{{ manage_vpc_peering_accepter_vpc_account_id | default(omit) }}"
