--- a/roles/manage_vpc_peering/tasks/create.yaml
+++ b/roles/manage_vpc_peering/tasks/create.yaml
@@ -7,7 +7,7 @@
 - name: Create VPC peering
   block:
     - name: Create VPC peering request
-      community.aws.ec2_vpc_peer:
+      amazon.aws.ec2_vpc_peering:
         region: "{{ manage_vpc_peering_region }}"
         peer_region: "{{ manage_vpc_peering_accepter_vpc_region | default(manage_vpc_peering_region, true) }}"
         vpc_id: "{{ manage_vpc_peering_requeter_vpc }}"
@@ -17,7 +17,7 @@
       register: manage_vpc_peering_vpc_peering_request
 
     - name: Ensure VPC peering connection request exists before moving forward
-      community.aws.ec2_vpc_peering_info:
+      amazon.aws.ec2_vpc_peering_info:
         peer_connection_ids:
           - "{{ manage_vpc_peering_vpc_peering_request.peering_id }}"
         region: "{{ manage_vpc_peering_accepter_vpc_region | default(manage_vpc_peering_region, true) }}"
@@ -32,7 +32,7 @@
         seconds: 5
 
     - name: Accept VPC peering request
-      community.aws.ec2_vpc_peer:
+      amazon.aws.ec2_vpc_peering:
         region: "{{ manage_vpc_peering_accepter_vpc_region | default(manage_vpc_peering_region, true) }}"
         peering_id: "{{ manage_vpc_peering_vpc_peering_request.peering_id }}"
         peer_owner_id: "{{ manage_vpc_peering_accepter_vpc_account_id | default(omit) }}"
