--- a/roles/ec2_instance_create/meta/argument_specs.yml
+++ b/roles/ec2_instance_create/meta/argument_specs.yml
@@ -4,8 +4,8 @@ argument_specs:
     short_description: A role to create an EC2 instance with optional networking resources.
     description:
       - A role to create an EC2 instance.
-      - Optionally can create a VPC, subnet, security group, and Elastic IP.
-      - Supports custom configurations for instance settings, including instance type, AMI, key pair, tags, etc.
+      - Optionally can create a security group and associate an Elastic IP with the instance.
+      - Supports custom configurations for instance settings, including instance type, AMI, key pair, tags, VPC/subnet, and networking configurations.
     options:
       ec2_instance_create_aws_region:
         description:
@@ -44,7 +44,54 @@ argument_specs:
         type: dict
       ec2_instance_create_wait_for_boot:
         description:
-          - Whether to wait for the instance to be in the running state before continuing.
+          - Whether to wait for the EC2 instance to be in the running state before continuing.
         required: false
         default: true
         type: bool
+      ec2_instance_create_associate_eip:
+        description:
+          - Whether to create and associate an Elastic IP (EIP) with the EC2 instance.
+        required: false
+        default: false
+        type: bool
+      ec2_instance_create_associate_sg:
+        description:
+          - Whether to create and associate a security group for external access.
+        required: false
+        default: false
+        type: bool
+      ec2_instance_create_sg_name:
+        description:
+          - The name of the security group to create.
+        required: false
+        default: "default-external-sg"
+        type: str
+      ec2_instance_create_sg_description:
+        description:
+          - A description of the security group.
+        required: false
+        default: "Security group for external access"
+        type: str
+      ec2_instance_create_sg_ssh_port:
+        description:
+          - The SSH port to open in the security group.
+        required: false
+        default: 22
+        type: int
+      ec2_instance_create_sg_http_port:
+        description:
+          - The HTTP port to open in the security group.
+        required: false
+        default: 80
+        type: int
+      ec2_instance_create_sg_https_port:
+        description:
+          - The HTTPS port to open in the security group.
+        required: false
+        default: 443
+        type: int
+      ec2_instance_create_sg_tags:
+        description:
+          - Tags to assign to the security group.
+        required: false
+        type: dict
