--- a/roles/ec2_instance_create/defaults/main.yml
+++ b/roles/ec2_instance_create/defaults/main.yml
@@ -6,3 +6,7 @@ ec2_instance_create_external_sg_description: "Security group for external access
 ec2_instance_create_external_sg_name: "default-external-sg"
 ec2_instance_create_external_sg_port: 22
 ec2_instance_create_wait_for_boot: true
+ec2_instance_create_external_sg_rules:
+  - proto: tcp
+    ports: 22
+    cidr_ip: "0.0.0.0/0"
