--- a/tests/integration/targets/test_ec2_instance_create/defaults/main.yml
+++ b/tests/integration/targets/test_ec2_instance_create/defaults/main.yml
@@ -1,6 +1,5 @@
 ---
 aws_security_token: "{{ security_token | default(omit) }}"
-resource_prefix: mandkulkt1
 
 # VPC and Subnet Configuration
 vpc_name: "{{ resource_prefix }}-vpc"
@@ -10,7 +9,7 @@ test_subnet_cidr: '101.{{ 255 | random(seed=resource_prefix) }}.0.0/24'
 
 # EC2 Instance Configuration
 ec2_instance_type: t2.micro
-ec2_key_name: "{{ resource_prefix }}-ec2-key"  # SSH key name for EC2 instances
+ec2_key_name: "{{ resource_prefix }}-ec2-key"
 
 # External Security Group Configuration
 external_sg_name: "{{ resource_prefix }}-external-sg"
