--- a/roles/ec2_networking_resources/tasks/main.yml
+++ b/roles/ec2_networking_resources/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
-- name: Run backup_create_plan_role
+- name: Run ec2_networking_resources role
   module_defaults:
     group/aws: "{{ aws_setup_credentials__output }}"
   block:
