--- a/roles/ec2_instance_create/meta/argument_specs.yml
+++ b/roles/ec2_instance_create/meta/argument_specs.yml
@@ -83,3 +83,30 @@ argument_specs:
         required: false
         default: false
         type: bool
+      ec2_instance_create_vpc_id:
+        description:
+          - The ID of the VPC used for security group and internet gateway.
+          - This is required when `ec2_instance_create_associate_external_sg` or `ec2_instance_create_associate_igw` is `true`.
+        required: false
+        type: str
+      ec2_instance_create_external_sg_id:
+        description:
+          - The ID or name of the security group to be associated with EC2 instance.
+        required: false
+        type: str
+      ec2_instance_create_eip_tags:
+        description:
+          - Tags to assign to the Elastic IP.
+        required: false
+        type: dict
+      ec2_instance_create_external_sg_rules:
+        description:
+          - A list of dict containing custom rules to add to the security group. Each rule is a dictionary with `proto`, `ports`, and `cidr_ip` keys. Default is to allow SSH (port 22) from `0.0.0.0/0`.
+        required: false
+        type: list
+        elements: dict
+      ec2_instance_create_igw_tags:
+        description:
+          - Tags to assign to the internet gateway.
+        required: false
+        type: dict
