--- a/extensions/experiences/configure_aws_network/playbooks/run_configure_aws_network.yml
+++ b/extensions/experiences/configure_aws_network/playbooks/run_configure_aws_network.yml
@@ -36,6 +36,7 @@
       ansible.builtin.include_role:
         name: cloud.aws_ops.ec2_networking_resources
       vars:
+        aws_region: "{{ region }}"
         ec2_networking_resources_vpc_name: "{{ vpc_name }}"
         ec2_networking_resources_vpc_cidr_block: "{{ vpc_cidr }}"
         ec2_networking_resources_subnet_cidr_block: "{{ subnet }}"
